tests/neg/i11437.scala
transparent inline def foo = error // error
